manifests-HW1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minimal-service
spec:
  selector:
    app: minimal-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: NodePort
